Fixed navbar on scroll readability

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,7 +26,6 @@ body {
   font-family: "roboto", sans-serif;
   margin: 0;
   width: 100%;
-  height: 100%;
   overflow-x: hidden;
 }
 
@@ -45,11 +44,9 @@ body {
     .push {
       margin-left: auto;
     }
-    .home {
+    li {
       font-size: 2rem;
       font-family: "handlettering", sans-serif;
-    }
-    li {
       padding: 1rem;
       padding-left: 0;
       a {
@@ -58,6 +55,12 @@ body {
         transition: color 1s ease;
         &:hover {
           color: $accent;
+        }
+      }
+      a:not(.homeText) {
+        color: $accent;
+        &:hover {
+          color: $lightColor;
         }
       }
     }
